# aurynk

./: README.md  aurynk-portable.spec  pyproject.toml
.github/workflows/: deploy-web.yml  flatpak-nightly.yml  windows-portable.yml
aurynk/: __main__.py  desktop_host.py  launcher.py
aurynk/api/: __init__.py  http_api.py
aurynk/core/: adb_manager.py  scrcpy_runner.py
aurynk/platform/: __init__.py  system_integration.py
aurynk/services/: __init__.py  app_service.py  qr_pairing_service.py
aurynk/utils/: adb_utils.py  logger.py  paths.py  settings.py  subprocess_utils.py
docs/: BUILDING.md  DEPENDENCIES.md
scripts/: build-portable-windows.ps1
tests/: test_adb_utils.py  test_app_service.py  test_http_api.py  test_logger.py  test_paths.py  test_subprocess_utils.py
web/src/: App.jsx  index.css
